[gd_scene load_steps=9 format=3 uid="uid://ubtgjbq1f0gw"]

[ext_resource type="Texture2D" uid="uid://k1pfomr466eg" path="res://assets/graphics/player/player.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://duyj2wca4ky2k" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://d32hg7thv7bgv" path="res://assets/graphics/decals/white.png" id="3_qhqgy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 57.9741

[sub_resource type="Gradient" id="Gradient_dqkch"]
colors = PackedColorArray(0, 1, 1, 0.482353, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qlg0r"]
gradient = SubResource("Gradient_dqkch")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tuyoq"]
lifetime_randomness = 0.4
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 15.0
initial_velocity_min = 250.0
initial_velocity_max = 550.0
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.8
color = Color(0, 1, 1, 1)
color_ramp = SubResource("GradientTexture1D_qlg0r")
hue_variation_min = -2.23517e-08
hue_variation_max = -2.23517e-08
turbulence_influence_min = 0.0
turbulence_influence_max = 1.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qhqgy"]
polygon = PackedVector2Array(0, -60, -10, -55, -16, -58, -26.4685, -52.5969, -27, -47, -37, -48, -48, -42, -52.1115, -34.5245, -51, -30, -59, -22, -60, -2, -57, 11, -50, 13, -53, 20, -50, 28, -43, 33, -34, 53, -23, 59, -7, 59, 14, 53, 26, 46, 42, 40, 60, 42, 60, 49, 94, 52, 96, 44, 104, 42, 108, 35, 121, 37, 121, 30, 131, 31, 134, 19, 129, 5, 123, 8, 125, 2, 112, 1, 109, -4, 97, -5, 86, -12, 77, -11, 57, -29, 49, -29, 44, -41, 36, -47, 29, -59, 21, -61, 10, -58)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_g2els")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(37, 0)
rotation = 1.5708
texture = ExtResource("1_3vyb7")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(132, 20)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(128, 11)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(128, 28)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(129, 20)
emitting = false
amount = 6
texture = ExtResource("3_qhqgy")
lifetime = 0.5
one_shot = true
explosiveness = 0.3
process_material = SubResource("ParticleProcessMaterial_tuyoq")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_qhqgy")

[node name="VulnerableTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="shoot_grenade" from="." to="." method="_on_shoot_grenade"]
[connection signal="shoot_laser" from="." to="." method="_on_shoot_laser"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
[connection signal="timeout" from="VulnerableTimer" to="." method="_on_vulnerable_timer_timeout"]
